<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RewardsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/checkmark"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/check" />

        <TextView
            android:id="@+id/tvCongratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/congratulations"
            android:textColor="@color/blackTextColor"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:lineHeight="25dp"
            android:text="You have successfully \ncompleted a scenario."
            android:textColor="@color/grayTextColor"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/checkmark1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                app:srcCompat="@drawable/medal" />

            <TextView
                android:id="@+id/tvNewPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@id/checkmark1"
                android:text="10 POINTS"
                android:textColor="@color/blackTextColor"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="23dp"
                android:layout_toRightOf="@id/checkmark1"
                android:text="@string/earned"
                android:textColor="@color/blackTextColor"
                android:textSize="24sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvUserPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(TOTAL: 25 POINTS)"
            android:textColor="@color/grayTextColor"
            android:textSize="18sp" />


    </LinearLayout>

    <Button
        android:id="@+id/confirm"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="22sp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="closeIntent"/>

</androidx.constraintlayout.widget.ConstraintLayout>