<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:background="@color/colorAccent"
        android:columnCount="3"
        android:paddingHorizontal="8dp"
        android:paddingTop="32dp"
        android:rowCount="1">

        <!--            Row 1 Col 1-->
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="260dp"
                    android:text="@string/my_score"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="16sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="662"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="24sp" />


            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/whiteTextColor" />

        </LinearLayout>

        <!--            Col 2 -->
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRanking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="260dp"
                    android:text="@string/my_rankning"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="16sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="132"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="24sp" />
            </LinearLayout>


            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/whiteTextColor" />

        </LinearLayout>

        <!--            Col 3  -->
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCityRanking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="260dp"
                android:text="@string/city_ranking"
                android:textColor="@color/whiteTextColor"
                android:textSize="16sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="12"
                android:textColor="@color/whiteTextColor"
                android:textSize="24sp" />
        </LinearLayout>

    </GridLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/ic_wave"
        android:paddingTop="32dp"
        android:scaleType="centerCrop" />

</LinearLayout>